Adding header element with div and class "header"

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="header">
+        <h5>Online Portfolio</h5>
+    </div>
 </body>
 </html>
