--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium fuga quibusdam numquam repellat tempore aliquid quo voluptatum adipisci, aut suscipit officia libero doloribus optio quaerat, consectetur iure provident nostrum. Et!</p>
+    <div class="footer">
+        Footer Element
+    </div>
 </body>
 </html>
